--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest --watchAll --verbose",
     "start": "node index.js"
   },
-   "engines":"14.17.1",
+  "engines": {
+    "node": "14.17.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
